--- a/MiniCrawl/export_presets.cfg
+++ b/MiniCrawl/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="minicrawl_alpha"
+name="MiniCrawl"
 platform="Windows Desktop"
 runnable=true
 dedicated_server=false
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../Desktop/Godot_builds/minicrawl_alpha.exe"
+export_path="../../Desktop/Godot_builds/minicrawl.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
@@ -31,16 +31,16 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
-application/modify_resources=true
+application/modify_resources=false
 application/icon=""
 application/console_wrapper_icon=""
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
-application/company_name=""
-application/product_name=""
+application/company_name="Federico Malato"
+application/product_name="MiniCrawl"
 application/file_description=""
-application/copyright=""
+application/copyright="MIT2 - Federico Malato"
 application/trademarks=""
 application/export_angle=0
 ssh_remote_deploy/enabled=false
